# learn-sth-of-CS

./: LICENSE  README.md  use-git.md
cmake/: cmake.md
cmake/step1/: CMakeLists.txt  readme.md  tutorial.cpp
cmake/step2/: CMakeLists.txt  readme.md  tutorial.cpp
cmake/step2/functions/: CMakeLists.txt  functions.h  mysqrt.cpp
cpp/: readme.md
cpp/OOP/: c++2.0.cpp  class-class.cpp  design_mode.cpp  empty_class.cpp  example.cpp  functions.cpp  my_string.cpp  oop_notes.md  oop_notes1st.md  pointer_like_class.cpp  stack_heap.cpp
cpp/STL/: readme.md
cpp/STL/day1/: container.cpp  day1.md  template.cpp
cpp/STL/day2/: allocator.cpp  container.cpp  day2.md  list.cpp
cpp/STL/day3/: day3.md  hash_table.cpp  rb_tree.cpp  set-map.cpp
cpp/STL/day4/: X_adapter.cpp  adapter.cpp  algo.cpp  category.cpp  day4.md  functors.cpp
cpp/STL/day5/: day5.md  hash_func.cpp  move.cpp  tuple.cpp  type_traits.cpp
git/: use-git.md
linux_command/: notes.md
